--- a/lang/en.json
+++ b/lang/en.json
@@ -34,13 +34,18 @@
     
     "homepage.downloads.subtitle": "Downloads",
     "homepage.downloads.title": "Catalog",
-    "homepage.downloads.file": "PDF Download Name",
+    "homepage.downloads.file1": "Katalog KNOMI (Hydraulika)",
+    "homepage.downloads.file2": "Katalog KOPR (Pneumatika)",
+    "homepage.downloads.file3": "Certifikáty ISO 9001 a IATF",
+    "homepage.downloads.file4": "Politika kvality a BOZP",
     
     "homepage.contact.subtitle": "Contact",
     "homepage.contact.title": "Contact Us",
     "homepage.contact.people.title": "Contact Persons",
-    "homepage.contact.people.name": "Luděk Nejedlo",
+    "homepage.contact.people.name": "Ing. Luděk Nejedlo",
     "homepage.contact.people.position": "CEO",
+    "homepage.contact.people.name2": "Ing. Petr Vlach",
+    "homepage.contact.people.position2": "Managing Director",
     "homepage.contact.email.title": "Email",
     "homepage.contact.phone.title": "Consultations, Orders, Inquiries",
     "homepage.contact.address.billing.title": "Billing Address and Company Headquarters",
