--- a/lang/cs.json
+++ b/lang/cs.json
@@ -79,6 +79,7 @@
     "form.terms": "Souhlasím s",
     "form.terms.link": "podmínkami zpracování osobních údajů",
     "form.submit": "Odeslat",
+    "form.success_message": "Úspěšně odesláno.",
 
     "footer.billing.title": "Sídlo firmy",
     "footer.operation.title": "Provozovna",
