--- a/lang/cs.json
+++ b/lang/cs.json
@@ -10,7 +10,7 @@
     "header.nav.contact": "Kontakt",
     
     "homepage.hero.subtitle": "Ryze český výrobce přesných rotačních dílů, komponent pro hydrauliku a trubek s certifikací IATF.",
-    "homepage.hero.title": "Váš kvalitní dodavatel",
+    "homepage.hero.title": "KNOMI s.r.o.",
     
     "homepage.products.title": "Naše produkty",
     "homepage.products.turned_parts": "Soustružné díly",
