--- a/lang/en.json
+++ b/lang/en.json
@@ -9,7 +9,7 @@
     "header.nav.contact": "Contact",
 
     "homepage.hero.subtitle": "Lorem ipsum dolor sit amet consectetur. Lectus mauris egestas scelerisque et quis lorem. Varius sem mauris nullam montes at et. Vivamus ultrices quisque malesuada integer a. Mattis tempor in volutpat velit elementum egestas elit.",
-    "homepage.hero.title": "MOTTO or GENERAL DESCRIPTION",
+    "homepage.hero.title": "KNOMI s.r.o.",
     
     "homepage.products.title": "Our Products",
     "homepage.products.turned_parts": "Turned Parts",
